--- a/SallesWebMvc/Views/_ViewImports.cshtml
+++ b/SallesWebMvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SallesWebMvc
 @using SallesWebMvc.Models
+@using SallesWebMvc.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
